# SOK

./: LICENSE  Makefile  requirements.txt  setup.bat  setup.sh
api/: pyproject.toml
api/citations/api/model/: __init__.py  author.py  citation.py
api/citations/api/services/: __init__.py
api/sok/api/: __init__.py
api/sok/api/model/: const.py  edge.py  graph.py  node.py
api/sok/api/services/: __init__.py  data_source_plugin.py  plugin.py  visualizer.py
api/src/api/interface/observer/: observable.py  observer.py
api/src/api/model/: edge.py  graph.py  node.py
api/src/api/services/: __init__.py  data_source_plugin.py  visualizer.py
block-visualizer/: pyproject.toml
block-visualizer/src/block_visualizer/: block_visualizer.py
block-visualizer/src/block_visualizer/templates/: block.html
core/: pyproject.toml
core/src/core/: application.py  const.py
core/src/core/model/: __init__.py  base_filter.py  command_processor.py  filter.py  search.py  workspace.py
core/src/core/service/: __init__.py  plugin_service.py
data_source_plugin-movies/: pyproject.toml  test_plugin.py
data_source_plugin-movies/src/movies_json/: parser.py  plugin.py  utils.py
data_source_plugin-movies/src/movies_json/data/: movies.json  movies_large.json
data_source_plugin-packages/: pyproject.toml  test_plugin.py
data_source_plugin-packages/src/packages_rdf/: __init__.py  plugin.py
data_source_plugin-packages/src/packages_rdf/data/: pkg_graph.ttl
datasource-citations/: pyproject.toml
datasource-citations/citations/citations_datasource/: __init__.py  citations.py
graph_explorer/graph_explorer/: settings.py  urls.py
graph_explorer/graph_explorer_app/: apps.py  urls.py  views.py
graph_explorer/graph_explorer_app/static/: bird-view.js  filter.js
graph_explorer/graph_explorer_app/templates/: index.html  tree_view.html
simple_visualizer/: pyproject.toml
simple_visualizer/src/simple_visualizer/: implementation.py  serializer.py
simple_visualizer/src/simple_visualizer/template/: simple-visualizer.html
