[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citations-datasource"
version = "0.1"
description = "Component for loading citations data from a specific data source."
dependencies = [
    "citations-api==0.1",
    "Django>=5.1"
]

[project.entry-points."shop.datasource"]
datasource_citations = "citations.citations_datasource.citations:CitationsDatasource"

[tool.setuptools]
packages = ["citations.citations_datasource"]
include-package-data = true

[tool.setuptools.package-data]
citations_datasource = ["../data/*"]